feat: implement delete all subjects route
