# src/docs/swagger.yaml
@@ -758,7 +758,31 @@ paths:
                     $ref: "#/components/responses/404"
                 "500":
                     $ref: "#/components/responses/500"
-
+        delete:
+            tags: [subjects]
+            security:
+                - bearerAuth: []
+            summary: Delete a Subject all subjects
+            description: Delete a Subject all subjects
+            responses:
+                "200":
+                    description: Subject deleted  successfully
+                    content:
+                        "application/json":
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                                        example: Subject deleted  successfully
+                "400":
+                    $ref: "#/components/responses/400"
+                "401":
+                    $ref: "#/components/responses/401"
+                "404":
+                    $ref: "#/components/responses/404"
+                "500":
+                    $ref: "#/components/responses/500"
     /subjects/{id}:
         get:
             tags: [subjects]
@@ -849,6 +873,14 @@ paths:
             responses:
                 "204":
                     description: Subject deleted  successfully
+                    content:
+                        "application/json":
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                                        example: Subject deleted  successfully
                 "400":
                     $ref: "#/components/responses/400"
                 "401":
